white space fix

--- a/index.css
+++ b/index.css
@@ -231,7 +231,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding: 10px;
+    padding: 10px 0 40px;
     box-sizing: border-box;
     gap: var(--gap-xl);
 }
@@ -314,12 +314,12 @@
 
 @media screen and (min-width: 500px) {
     .containers {
-        padding: 0 16%;
+        padding: 0 16% 40px;
     }
 }
 
 @media screen and (min-width: 900px) {
     .containers {
-        padding: 0 34%;
+        padding: 0 34% 40px;
     }
 }
